// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowRecipe tests Draws correctly 1`] = `
<div>
  <Card
    title=""
  >
    <img
      src="pizza.jpg"
    />
    <h1>
      Pizza
    </h1>
    <p>
      Beskrivelse: 
      Pizza er god og enkel
    </p>
    <p>
      Kategori:
       
      enkelt
    </p>
    <p>
      Antall likes: 
      1
    </p>
    <FormCheckbox
      checked={false}
      id="checkbox"
      onChange={[Function]}
    />
    <label
      htmlFor="checkbox"
      id="heart"
    >
      <img
        src="https://static5.depositphotos.com/1001759/463/i/600/depositphotos_4634746-stock-photo-red-heart-isolated-white-background.jpg"
        width="50px"
      />
    </label>
    <h5>
      Oppskrift:
    </h5>
    <pre>
      Bland deigen og la den heve
    </pre>
    <h3>
      Ingredienser
    </h3>
    Porsjoner
     
    <ButtonDanger
      id="btnDec"
      onClick={[Function]}
    >
      -
    </ButtonDanger>
     
    <b>
      4
    </b>
     
    <ButtonSuccess
      id="btnInc"
      onClick={[Function]}
    >
      +
    </ButtonSuccess>
    <p
      key="0"
    >
      1
      .
       
      pizzadeig
       
      1.0
       
      stk
    </p>
    <p
      key="1"
    >
      2
      .
       
      pizza fyll
       
      1.0
       
      håndfull
    </p>
    <p
      key="2"
    >
      3
      .
       
      kjøttboller
       
      400.0
       
      g
    </p>
  </Card>
  <ButtonSuccess
    onClick={[Function]}
  >
    Endre oppskrift
  </ButtonSuccess>
  <ButtonDanger
    id="deleteRecipe"
    onClick={[Function]}
  >
    Slett oppskrift
  </ButtonDanger>
  <ButtonSuccess
    id="btnSend"
    onClick={[Function]}
  >
    Send ingredienser til handleliste
  </ButtonSuccess>
</div>
`;

exports[`ShowRecipe tests Number decrement works 1`] = `
<div>
  <Card
    title=""
  >
    <img
      src="pizza.jpg"
    />
    <h1>
      Pizza
    </h1>
    <p>
      Beskrivelse: 
      Pizza er god og enkel
    </p>
    <p>
      Kategori:
       
      enkelt
    </p>
    <p>
      Antall likes: 
      1
    </p>
    <FormCheckbox
      checked={false}
      id="checkbox"
      onChange={[Function]}
    />
    <label
      htmlFor="checkbox"
      id="heart"
    >
      <img
        src="https://static5.depositphotos.com/1001759/463/i/600/depositphotos_4634746-stock-photo-red-heart-isolated-white-background.jpg"
        width="50px"
      />
    </label>
    <h5>
      Oppskrift:
    </h5>
    <pre>
      Bland deigen og la den heve
    </pre>
    <h3>
      Ingredienser
    </h3>
    Porsjoner
     
    <ButtonDanger
      id="btnDec"
      onClick={[Function]}
    >
      -
    </ButtonDanger>
     
    <b>
      3
    </b>
     
    <ButtonSuccess
      id="btnInc"
      onClick={[Function]}
    >
      +
    </ButtonSuccess>
    <p
      key="0"
    >
      1
      .
       
      pizzadeig
       
      0.8
       
      stk
    </p>
    <p
      key="1"
    >
      2
      .
       
      pizza fyll
       
      0.8
       
      håndfull
    </p>
    <p
      key="2"
    >
      3
      .
       
      kjøttboller
       
      300.0
       
      g
    </p>
  </Card>
  <ButtonSuccess
    onClick={[Function]}
  >
    Endre oppskrift
  </ButtonSuccess>
  <ButtonDanger
    id="deleteRecipe"
    onClick={[Function]}
  >
    Slett oppskrift
  </ButtonDanger>
  <ButtonSuccess
    id="btnSend"
    onClick={[Function]}
  >
    Send ingredienser til handleliste
  </ButtonSuccess>
</div>
`;

exports[`ShowRecipe tests Number increment works 1`] = `
<div>
  <Card
    title=""
  >
    <img
      src="pizza.jpg"
    />
    <h1>
      Pizza
    </h1>
    <p>
      Beskrivelse: 
      Pizza er god og enkel
    </p>
    <p>
      Kategori:
       
      enkelt
    </p>
    <p>
      Antall likes: 
      1
    </p>
    <FormCheckbox
      checked={false}
      id="checkbox"
      onChange={[Function]}
    />
    <label
      htmlFor="checkbox"
      id="heart"
    >
      <img
        src="https://static5.depositphotos.com/1001759/463/i/600/depositphotos_4634746-stock-photo-red-heart-isolated-white-background.jpg"
        width="50px"
      />
    </label>
    <h5>
      Oppskrift:
    </h5>
    <pre>
      Bland deigen og la den heve
    </pre>
    <h3>
      Ingredienser
    </h3>
    Porsjoner
     
    <ButtonDanger
      id="btnDec"
      onClick={[Function]}
    >
      -
    </ButtonDanger>
     
    <b>
      5
    </b>
     
    <ButtonSuccess
      id="btnInc"
      onClick={[Function]}
    >
      +
    </ButtonSuccess>
    <p
      key="0"
    >
      1
      .
       
      pizzadeig
       
      1.3
       
      stk
    </p>
    <p
      key="1"
    >
      2
      .
       
      pizza fyll
       
      1.3
       
      håndfull
    </p>
    <p
      key="2"
    >
      3
      .
       
      kjøttboller
       
      500.0
       
      g
    </p>
  </Card>
  <ButtonSuccess
    onClick={[Function]}
  >
    Endre oppskrift
  </ButtonSuccess>
  <ButtonDanger
    id="deleteRecipe"
    onClick={[Function]}
  >
    Slett oppskrift
  </ButtonDanger>
  <ButtonSuccess
    id="btnSend"
    onClick={[Function]}
  >
    Send ingredienser til handleliste
  </ButtonSuccess>
</div>
`;

exports[`ShowRecipe tests Number of likes 1`] = `
<div>
  <Card
    title=""
  >
    <img
      src="pizza.jpg"
    />
    <h1>
      Pizza
    </h1>
    <p>
      Beskrivelse: 
      Pizza er god og enkel
    </p>
    <p>
      Kategori:
       
      enkelt
    </p>
    <p>
      Antall likes: 
      1
    </p>
    <FormCheckbox
      checked={false}
      id="checkbox"
      onChange={[Function]}
    />
    <label
      htmlFor="checkbox"
      id="heart"
    >
      <img
        src="https://static5.depositphotos.com/1001759/463/i/600/depositphotos_4634746-stock-photo-red-heart-isolated-white-background.jpg"
        width="50px"
      />
    </label>
    <h5>
      Oppskrift:
    </h5>
    <pre>
      Bland deigen og la den heve
    </pre>
    <h3>
      Ingredienser
    </h3>
    Porsjoner
     
    <ButtonDanger
      id="btnDec"
      onClick={[Function]}
    >
      -
    </ButtonDanger>
     
    <b>
      4
    </b>
     
    <ButtonSuccess
      id="btnInc"
      onClick={[Function]}
    >
      +
    </ButtonSuccess>
    <p
      key="0"
    >
      1
      .
       
      pizzadeig
       
      1.0
       
      stk
    </p>
    <p
      key="1"
    >
      2
      .
       
      pizza fyll
       
      1.0
       
      håndfull
    </p>
    <p
      key="2"
    >
      3
      .
       
      kjøttboller
       
      400.0
       
      g
    </p>
  </Card>
  <ButtonSuccess
    onClick={[Function]}
  >
    Endre oppskrift
  </ButtonSuccess>
  <ButtonDanger
    id="deleteRecipe"
    onClick={[Function]}
  >
    Slett oppskrift
  </ButtonDanger>
  <ButtonSuccess
    id="btnSend"
    onClick={[Function]}
  >
    Send ingredienser til handleliste
  </ButtonSuccess>
</div>
`;
